Update title in index.htm for product change

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 
 <script src="scripts/utms/latest.js" data-utmify-prevent-subids="" async="" defer=""></script>
 	<meta charset="UTF-8">
-	<title>TV Portátil de 22 Polegadas com Tela Touchscreen (função tablet) + Sistema Android (função smart)</title>
+	<title>Caixa De Som Bluetooth Partybox Encore Essential 100w Jbl Cor Preto</title>
 
 	<meta name="robots" content="max-image-preview:large">
 	<link rel="alternate" type="application/rss+xml" title="Feed para Cupons Premiados »" href="https://cuponspremiados.site/ofertas/feed/">
