--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -788,7 +788,7 @@
 					<div class="elementor-element elementor-element-276ce64f elementor-widget elementor-widget-heading" data-id="276ce64f" data-element_type="widget" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
 							<h2 class="elementor-heading-title elementor-size-default"><strike>R$ 229,90</strike> <span style="background-color:#ffe97a;color:#ee4d2d;padding-left:2px;padding-right: 2px;font-size:14px;vertical-align:center">-<strong>
-										23% </strong></span></h2>
+										-61,85% </strong></span></h2>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-63a78bf6 elementor-widget elementor-widget-heading" data-id="63a78bf6" data-element_type="widget" data-widget_type="heading.default">
